# lazier

./: .gitignore  CHANGELOG.md  README.md  launch.ps1  launch.sh  lazier.ps1
.claude/: launch.json
backend/: pyproject.toml
backend/lazier/: __init__.py  agents.py  config.py  direction.py  llm.py  lucy.py  main.py  media_probe.py  models.py  render.py  segmentation.py  serper.py  shorts.py  sounddirection.py  soundsourcing.py  sourcing.py  storage.py  transcribe.py  vision.py  webcapture.py  webcapture_worker.py  youtube.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Editor.tsx  ProjectList.tsx  SoundPanel.tsx  SuggestionPanel.tsx  Timeline.tsx
frontend/src/lib/: api.ts  types.ts  useCallbackRef.ts
notes/: HANDOFF.md
notes/00-intake/: original-request.md  synthesis.md
notes/01-architecture/: diagram.md  frontend-foundation.md  media-sources.md  overview.md
notes/02-agents/: tool-design.md
notes/05-ideas/: memes-and-tuning.md
notes/06-direction/: visual-direction.md
notes/07-inspector/: observability.md
notes/08-roadmap/: roadmap.md
notes/09-web-capture/: hardening.md
notes/10-incremental-proxy/: design.md
notes/11-manual-sourcing/: plan.md
notes/12-shorts/: plan.md
notes/13-sound-design/: plan.md
notes/13-vocal-chain/: plan.md
notes/14-layering/: plan.md
notes/15-publish/: plan.md
