[project]
name = "lazier"
version = "0.1.0"
description = "Audio-driven autonomous video editor — M1 spine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "pydantic>=2.9",
    "faster-whisper>=1.1.0",
    "openai>=1.59",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "yt-dlp>=2026.6.9",
    "playwright>=1.61.0",
]

[tool.uv]
package = false
